# EmbedAI-only

./: .env.example  .gitignore  DATABASE_SETUP.md  DEPLOYMENT.md  README.MD  check-databases.sh  deploy.sh  docker-compose-db.yml  docker-compose.yml  main.py  pyproject.toml  run.py  start-databases.sh  stop-databases.sh
api/: db_manager.py
api/models/: user_model.py
api/routes/: admin.py  auth_router.py  chat.py  health.py  knowledge_router.py
api/utils/: auth_middleware.py  auth_utils.py
core/: kb_service.py
data/database/: server.db
data/knowledge_graph/neo4j/: graph_info.json
frontend_admin/: Dockerfile  README.MD  nginx.conf  package.json  tsconfig.app.tsbuildinfo  tsconfig.json
frontend_admin/src/: App.tsx  index.css  main.tsx
frontend_admin/src/apis/: admin_api.js  index.js
frontend_admin/src/components/layout/: Layout.tsx
frontend_admin/src/lib/: utils.ts
frontend_admin/src/pages/: Analytics.tsx  Dashboard.tsx  DatabaseManagement.tsx  FileUpload.tsx  GraphManagement.tsx  Settings.tsx  UserManagement.tsx
frontend_admin/src/types/: apis.d.ts
frontend_sdk/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend_sdk/src/: index.ts
frontend_sdk/src/components/: ChatWidget.tsx  ChatWindow.tsx  FloatingButton.tsx  LoadingIndicator.tsx  MessageInput.tsx  MessageList.tsx  ProductCard.tsx  index.ts
frontend_sdk/src/demo/: index.html
frontend_sdk/src/services/: api.ts
frontend_sdk/src/styles/: widget.css
frontend_sdk/src/types/: index.ts
frontend_sdk/src/utils/: config.ts
knowledge/: __init__.py  graphbase.py  kb_factory.py  kb_manager.py  kb_utils.py  knowledge_base.py
milvus/: milvus.yaml
models/: __init__.py  chat_model.py  embedding.py
server/: .env.example  Dockerfile  main.py  pyproject.toml
server/api/models/: __init__.py  kb_models.py  thread_model.py
server/api/routes/: admin.py  chat.py  graph_router.py  knowledge_router.py
server/api/utils/: common_utils.py
server/core/: __init__.py  config.py  exceptions.py  kb_service.py
server/knowledge/: graphbase.py  indexing.py  kb_utils.py  lightrag_kb.py
server/models/: __init__.py  embedding.py  rerank_model.py
server/schemas/: requests.py  responses.py
server/tests/: README.md  conftest.py  conftest_simple.py  test_api.py  test_auth.py  test_database_connection.py  test_graph.py  test_integration.py  test_knowledge.py
server/utils/: __init__.py  minio_utils.py
tests/: conftest.py  test_admin_api.py  test_chat_api.py  test_db_operations.py  test_external_services.py  test_health_api.py  test_knowledge_api.py
utils/: logging_config.py
